[package]
name = "engine"
version = "0.1.0"
authors = ["Dmitry <mamhigtt@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp = "0.5"

[build-dependencies]
cmake = "0.1"
cpp_build = { path = "cpp_build" }
